--- a/templates/Tryon2D.html
+++ b/templates/Tryon2D.html
@@ -70,7 +70,7 @@
         reader.readAsDataURL(file);
     });
 </script>
-<script type="text/javascript" src="./templates/Tryon2D.js"></script>
+<script type="text/javascript" src="./static/Tryon2D.js"></script>
 
 </body>
 
