--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,11 @@
             <h1 style="font-size: 50px;">StyleMate</h1></a>
             <ul class="nav-list header-nav-list">
                 <li class="list-items"><a href="#">Home</a></li>
-                <li class="list-items"><a href="./about/about.html">Upload Clothes</a></li>
-                <li class="list-items"><a href="./refugee page/refugee_page.html">Result Page</a></li>
+                <li class="list-items"><a href="upload.html">Upload Clothes</a></li>
+                <li class="list-items"><a href="./refugee page/refugee_page.html">About Page</a></li>
                 <li class="list-items"><a href="">Services</a></li>
             </ul>
-            <button class="try-btn-header">Try-On Button</button>
+            <button class="try-btn-header"><a href="Tryon2D.html">Try-On Button</a></button>
         </div>
     </header>
     <main>
