--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,68 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="up_img_style.css">
-</head>
-
-<body>
-     <header>
-        <div class="container header-container">
-            <a href="#" class="header-logo logo"><img src="logo.jpeg" alt="" width="100px" height="100px"
-                    viewBox="0 0 486.572 486.572">
-                <h1>NetNinjas</h1>
-            </a>
-            <ul class="nav-list header-nav-list">
-                <li class="list-items"><a href="#">Home</a></li>
-                <li class="list-items"><a href="./about/about.html">Upload Clothes</a></li>
-                <li class="list-items"><a href="./refugee page/refugee_page.html">Result Page</a></li>
-                <li class="list-items"><a href="">Services</a></li>
-            </ul>
-            <button class="donate-btn-header">Donate Now</button>
-        </div>
-    </header> -->
-<!-- <main>
-        <h1>Upload and Display Image</h1>
-        <form action="/upload" method="POST" enctype="multipart/form-data">
-            <input type="file" name="file" id="imageInput" accept="image/*">
-            <input type="submit" value="Submit">
-        </form>
-    </main>
-    <footer>
-        <div class="container footer-container">
-            <div class="icons">
-                <a href="" class="fb-icon footer-icons"><i class="bx bxl-facebook-square"></i></a>
-                <a href="" class="twitter-icon footer-icons"><i class="bx bxl-twitter"></i></a>
-                <a href="" class="insta-icon footer-icons"><i class="bx bxl-instagram"></i></a>
-                <a href="" class="youtube-icon footer-icons"><i class="bx bxl-youtube"></i></a>
-            </div>
-            <div class="footer-nav-items">
-                <a href="./about/about.html">About</a>
-                <a href="">Services</a>
-                <a href="./refugee page/refugee_page.html">Refugee Page</a>
-
-            </div>
-        </div>
-    </footer>
-    <script>
-        document.getElementById('imageInput').addEventListener('change', function() {
-          var file = this.files[0];
-          if (file) {
-            var reader = new FileReader();
-            reader.onload = function(e) {
-              document.getElementById('imagePreview').style.backgroundImage = 'url(' + e.target.result + ')';
-            };
-            reader.readAsDataURL(file);
-          }
-        });
-      </script>
-</body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -70,9 +5,128 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Upload</title>
-    <!-- <link rel="stylesheet" href="/static/image_upload.css"> -->
     <style>
-        .container {
+        :root{
+    /* --dark-blue-shade:rgb(218, 114, 178) ; */
+    --dark-blue-shade:hsl(300, 52%, 4%) ;
+    --light-blue-shade: #ffddd2;
+    --dark-text-color: navy;
+    --hover-color: rgb(40, 129, 154);
+    --largest-breakpoint : 1500px;
+    --medium-breakpoint: 900px;
+    --smallest-breakpoint: 400px;
+    --pure-white-shade: #FFFFFF;
+    --largest-font-size: 2.5rem;
+    --medium-font-size: 1.5rem;
+    --small-font-size: 1rem;
+    --large-font-size: 2rem;
+   
+}
+
+html {
+    font-size: 95%;
+}
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: serif;
+    list-style: none;
+    text-decoration: none;
+    
+}
+body{
+    width: 100%;
+    min-height: 750x;
+    
+}
+
+header{
+    
+    background-color: var(--dark-blue-shade);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-bottom: 2px solid var(--light-blue-shade);
+    
+    
+}
+.container{
+    width: 90%;
+}
+.header-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height:150px;
+}
+.logo h1{
+    color: var(--pure-white-shade);
+    font-size: var(--largest-font-size);
+}
+
+.header-logo{
+    display: flex;
+    align-items: center;
+}
+
+.header-nav-list{
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.header-nav-list a{
+    font-size: var(--medium-font-size);
+    font-family: 500;
+    color: var(--pure-white-shade);
+    position: relative;
+}
+
+
+.header-nav-list a::after{
+    content: "";
+    width: 0;
+    height: 3px;
+    background-color: white;
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s ease;
+}
+.header-nav-list a:hover::after{
+    width: 100%;
+}
+.try-btn-header{
+    background-color: transparent;
+    font-size: 1.6rem;
+    padding: 0.5em;
+    border-radius: 30px;
+    border: 2px solid var(--pure-white-shade);
+    color: var(--pure-white-shade);
+    box-shadow: 0 8px 16px 0 rgba(196, 241, 31, 0.2), 0 6px 20px 0 rgba(202, 239, 52, 0.19);
+}
+
+.try-btn-header a{
+    color: #ffffff;
+}
+
+.try-btn-header:hover{
+    background-color: var(--hover-color);
+}
+        .mainContainer{
+              margin-top: 220px;
+
+        }
+        .cont1 {
             max-width: 600px;
             margin: 0 auto;
             padding: 20px;
@@ -85,29 +139,175 @@
             justify-content: center;
             align-items: center;
             display: flex;
-            flex-direction: column;
+            gap: 20px;
             margin-top: 20px;
+        }
+
+        .inner-div {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        #image-upload {
+            padding-left: 80px;
         }
 
         #image-preview {
             max-width: 300px;
             max-height: 300px;
             margin-top: 10px;
+            margin-left: 10px;
         }
+
+        .upl {
+            width: 50px;
+        }
+
+        .footer-icons{
+    color: white;
+    font-size: var(--largest-font-size);
+}
+.footer{
+    background-color: black;
+    padding: 70px 0;
+    color: white;
+    width:100%;
+    margin-top: 100px;
+
+}
+.footer-container{
+    margin:auto;
+    color: #ffffff;
+}
+ul{
+    list-style: none;
+    color: #ffffff;
+}
+.row{
+    display:flex;
+    flex-wrap:wrap;
+}
+.footer-col{
+    width:25%;
+    padding:0 15px;
+}
+.footer-col h4{
+    font-size: 30px;
+    color:#ffffff;
+    text-transform: capitalize;
+    margin-bottom:30px;
+    font-weight: 500;
+    position: relative;
+
+}
+.footer-col h4::before{
+    content:'';
+    position:absolute;
+    left:0;
+    bottom:-10px;
+    background-color: #e91e63;
+    height:2px;
+    box-sizing:border-box;
+    width:50px;
+}
+
+.footer-col ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+.footer-col ul li a{
+    font-size: 18px;
+    text-transform: capitalize;
+    color: #ffffff;
+}
     </style>
 </head>
 
 <body>
+
+    <header>
+        <div class = "container header-container">
+            <!-- <a href="#" class="header-logo logo"><img src="../resources/heart-in-hands-svgrepo-com.svg" alt=""> -->
+                <a href="#" class="header-logo logo"><img src="../static/logo.jpg.jpeg" alt="" width="100px" height="100px" viewBox="0 0 486.572 486.572">
+            <h1 style="font-size: 50px;">StyleMate</h1></a>
+            <ul class="nav-list header-nav-list">
+                <li class="list-items"><a href="#">Home</a></li>
+                <li class="list-items"><a href="upload.html">Upload Clothes</a></li>
+                <li class="list-items"><a href="./refugee page/refugee_page.html">About Page</a></li>
+                <li class="list-items"><a href="">Services</a></li>
+            </ul>
+            <button class="try-btn-header"><a href="Tryon2D.html">Try-On Button</a></button>
+        </div>
+    </header>
+
+
+    <div class="mainContainer">
+
     <h1 style="text-align: center;">GET NEW DESIGNED OUTFITS</h1>
     <div class="cont1">
         <div class="div1">
-            <h2>Upload Image</h2>
-            <input type="file" id="image-upload" accept="image/*" />
+            <div class="inner-div">
+                <h2>Upload Image</h2>
+                <img src="./static/uplpng.jpg" class="upl" alt="image"><br><br>
+                <input type="file" id="image-upload" accept="image/*" />
+            </div>
             <div id="image-preview"></div>
         </div>
     </div>
-    <script>
 
+    <footer class="footer">
+        <div class="container footer-container">
+           <div class="row">
+
+            <div class="footer-col">
+                <h4>Company</h4>
+                <ul>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">our services</a></li>
+                    <li><a href="#">privacy policy</a></li>
+                    <li><a href="#">affiliate program</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4>get help</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">shipping</a></li>
+                    <li><a href="#">reture</a></li>
+                    <li><a href="#">order status</a></li>
+                    <li><a href="#">payment options</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>online shop</h4>
+                <ul>
+                    <li><a href="#">watch</a></li>
+                    <li><a href="#">bag</a></li>
+                    <li><a href="#">shoes</a></li>
+                    <li><a href="#">dress</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>follow us</h4>
+               <div class="social-links">
+                <a href="" class="fb-icon footer-icons"><i class="bx bxl-facebook-square"></i></a>
+                <a href="" class="twitter-icon footer-icons"><i class="bx bxl-twitter"></i></a>
+                <a href="" class="insta-icon footer-icons"><i class="bx bxl-instagram"></i></a>
+                <a href="" class="youtube-icon footer-icons"><i class="bx bxl-youtube"></i></a>
+               </div>
+            </div>
+
+
+           </div>   
+              
+              
+              
+        </div>
+    </footer>
+
+    <script>
         const imageUpload = document.getElementById('image-upload');
         const imagePreview = document.getElementById('image-preview');
 
@@ -120,8 +320,15 @@
                     image.src = e.target.result;
                     image.style.maxWidth = '100%';
                     image.style.maxHeight = '100%';
-                    imagePreview.innerHTML = ''; // Clear previous image
-                    imagePreview.appendChild(image);
+                    image.onload = function () {
+                        const aspectRatio = image.width / image.height;
+                        const newHeight = 300;
+                        const newWidth = newHeight * aspectRatio;
+                        imagePreview.innerHTML = '';
+                        imagePreview.appendChild(image);
+                        imagePreview.style.width = newWidth + 'px';
+                        imagePreview.style.height = newHeight + 'px';
+                    };
                 };
                 reader.readAsDataURL(file);
             } else {
@@ -129,7 +336,6 @@
             }
         });
     </script>
-    <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
